--- a/Prof-Arley/mystore/index.html
+++ b/Prof-Arley/mystore/index.html
@@ -6,34 +6,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
-    <title>Redragon</title>
+    <title>My Store</title>
 </head>
 
 <body>
     <header class="top-bar">
-        <img class="top-bar--brand-logo" src="img/e-commerce.png" alt="Logotipo da empresa">
-        <section class="top-bar--login">
-            <a class="top-bar--login-btn-entrar" href="#">Entrar</a>
-            <img class="top-bar--login-logo" src="img/user.png" alt="Logotipo representativo de um usuario">
+        <img class="top-bar__brand-logo" src="img/e-commerce.png" alt="Logotipo da empresa">
+        <h1 class="top-bar__brand">MyStore</h1>
+        <section class="login">
+            <a class="login__btn-entrar" href="#">Entrar</a>
+            <img class="login__logo" src="img/user.png" alt="Logotipo representativo de um usuario">
         </section>
     </header>
-
-    <main class="conteudo-principal">
-        <section class="conteudo-principal--section">
-            <div>
-                <h2 class="conteudo-principal--title">Desktop Redragon</h2>
-                <p class="conteudo-principak--paragrafy">Venha Conhecer os melhores HardWares e Perifericos do Brasil!
-                </p>
-                <a class="conteudo-principal-btn" href="#">Acesse aqui nosso Site Oficial!</a>
-            </div>
-            <img class="conteudo-principal--img" src="img/desktop computer-bro (1).svg" alt="">
-        </section>
-
-        <section>
-            <img src="img/desktop computer-rafiki.svg" alt="">
-            <h2>Perifericos</h2>
-        </section>
-    </main>
 </body>
 
 </html>
