Iniciamos um projeto Home Host com o Professor Bruno

--- a/Prof-Bruno/flexTurismo/index.html
+++ b/Prof-Bruno/flexTurismo/index.html
@@ -22,8 +22,9 @@
             </nav>
         </div>
     </header>
+
     <main>
-        <div class="apresentacao">
+        <div class="container apresentacao">
             <div class="txt-apresentacao">
                 <h2>Flex <br> Turismo</h2>
                 <p>O melhor serviço para você!</p>
@@ -32,6 +33,50 @@
 
             <div class="imagem-main">
                 <img src="img/0-main.png" alt="">
+            </div>
+        </div>
+
+        <div class="container quem-somos">
+            <div class="quem-somo__txt">
+                <h2 class="quem-somos__title">Quem Somos</h2>
+                <p class="quem-somos__paragrafo">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corrupti,
+                    tempora sint, vero laboriosam
+                    modi, ab cumque iste quas rerum incidunt consequatur a doloremque vitae? Architecto quo praesentium
+                    autem amet? Minima.</p>
+                <p class="quem-somos__paragrafo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati
+                    ullam omnis sapiente facilis
+                    deserunt porro necessitatibus. Impedit, dolorem magnam modi fuga voluptate corrupti, dolor
+                    perspiciatis totam rerum iste quam qui.</p>
+            </div>
+            <div class="quem-somos__img">
+                <img src="img/1-quem-somos.png" alt="Balcão de atendimento">
+            </div>
+        </div>
+
+        <div class="container-externo">
+            <div class="container" id="servicos">
+                <div class="servicos-title">
+                    <h2>Serviços</h2>
+                </div>
+                <div class="list-servicos">
+                    <div class="item-servicos">
+                        <img src="img/icon-2.png" alt="hospedagem">
+                        <p>Hospedagem</p>
+                        <a href="#">Comprar Agora</a>
+                    </div>
+
+                    <div class="item-servicos">
+                        <img src="img/icon-1.png" alt="pacotes de viagem">
+                        <p>Pacotes de viagem</p>
+                        <a href="#">Comprar Agora</a>
+                    </div>
+
+                    <div class="item-servicos">
+                        <img src="img/icon-3.png" alt="roteiros personalizados">
+                        <p>Roteiros Personalizados</p>
+                        <a href="#">Comprar Agora!</a>
+                    </div>
+                </div>
             </div>
         </div>
     </main>
