Demos continuidade no projeto Home Host, criando o header e a main

--- a/Prof-Bruno/homeHost/index.html
+++ b/Prof-Bruno/homeHost/index.html
@@ -10,19 +10,50 @@
 </head>
 
 <body>
-    <header class="container">
-        <div class="navbar-container">
-            <nav>
-                <a href="#"><img class="logo" src="img/hdchostlogo.png" alt=""></a>
-                <ul class="navbar-items">
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">Planos</a></li>
-                    <li><a href="#">Contatos</a></li>
-                    <li><a href="#" class="defaulf-btp">Login</a></li>
+    <div class="container">
+        <header>
+            <div class="navbar-container">
+                <nav>
+                    <a href="#"><img class="logo" src="img/hdchostlogo.png" alt=""></a>
+                    <ul class="navbar-items">
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">Planos</a></li>
+                        <li><a href="#">Contatos</a></li>
+                        <li><a href="#" class="defaulf-btn">Login</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </header>
+
+        <main>
+            <div class="main-banner">
+                <h1>Home Host</h1>
+                <p>Os melhores planos para qualquer tipo de projeto!</p>
+            </div>
+
+            <section class="specialties-container">
+                <ul>
+                    <li>
+                        <i class="fa-solid fa-shield-halved"></i>
+                        <h3>Segurança</h3>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Autem consequuntur nostrum ex pariatur culpa, ipsa, at quia modi, saepe ducimus eum exercitationem nemo unde. Tempora enim quidem perspiciatis a deleniti.</p>
+                    </li>
+
+                    <li>
+                        <i class="fa-solid fa-rocket"></i>
+                        <h3>Velocidade</h3>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Autem consequuntur nostrum ex pariatur culpa, ipsa, at quia modi, saepe ducimus eum exercitationem nemo unde. Tempora enim quidem perspiciatis a deleniti.</p>
+                    </li>
+
+                    <li>
+                        <i class="fa-solid fa-comments"></i>
+                        <h3>Suporte</h3>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Autem consequuntur nostrum ex pariatur culpa, ipsa, at quia modi, saepe ducimus eum exercitationem nemo unde. Tempora enim quidem perspiciatis a deleniti.</p>
+                    </li>
                 </ul>
-            </nav>
-        </div>
-    </header>
+            </section>
+        </main>
+    </div>
 
     <script src="https://kit.fontawesome.com/ebc3101efe.js" crossorigin="anonymous"></script>
 </body>
