--- a/Prof-Arley/SuperMarioBross/index.html
+++ b/Prof-Arley/SuperMarioBross/index.html
@@ -6,15 +6,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Super Mario Bros</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
     <header>
-        <img src="" alt="">
+        <img class="logo" src="img/logo.png" alt="">
         <nav>
             <ul class="menu-navbar">
                 <li><a href="#">Inicio</a></li>
-                <li><a href="#">Games</a></li>
+                <li><a href="./pages/games.html">Games</a></li>
                 <li><a href="#">Github</a></li>
                 <li><a href="#">Settings</a></li>
             </ul>
