--- a/Prof-Arley/SuperMarioBross/pages/games.html
+++ b/Prof-Arley/SuperMarioBross/pages/games.html
@@ -11,7 +11,7 @@
         <img src="" alt="">
         <nav>
             <ul class="menu-navbar">
-                <li><a href="#">Inicio</a></li>
+                <li><a href="../index.html">Inicio</a></li>
                 <li><a href="#">Games</a></li>
                 <li><a href="#">Github</a></li>
                 <li><a href="#">Settings</a></li>
