Demos continuidade no projeto Home Host com o Prof Bruno

--- a/Prof-Arley/SuperMarioBross/index.html
+++ b/Prof-Arley/SuperMarioBross/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <header>
-        <img class="logo" src="img/logo.png" alt="">
+        <img class="logo" src="img/Mario_Series_Logo.svg.png" alt="">
         <nav>
             <ul class="menu-navbar">
                 <li><a href="#">Inicio</a></li>
