--- a/Prof-Arley/SuperMarioBross/pages/games.html
+++ b/Prof-Arley/SuperMarioBross/pages/games.html
@@ -12,7 +12,7 @@
         <nav>
             <ul class="menu-navbar">
                 <li><a href="../index.html">Inicio</a></li>
-                <li><a href="#">Games</a></li>
+                <li><a href="#">Jogos</a></li>
                 <li><a href="#">Github</a></li>
                 <li><a href="#">Settings</a></li>
             </ul>
