--- a/Prof-Bruno/homeHost/index.html
+++ b/Prof-Bruno/homeHost/index.html
@@ -36,21 +36,102 @@
                     <li>
                         <i class="fa-solid fa-shield-halved"></i>
                         <h3>Segurança</h3>
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Autem consequuntur nostrum ex pariatur culpa, ipsa, at quia modi, saepe ducimus eum exercitationem nemo unde. Tempora enim quidem perspiciatis a deleniti.</p>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Autem consequuntur nostrum ex
+                            pariatur culpa.</p>
                     </li>
 
                     <li>
                         <i class="fa-solid fa-rocket"></i>
                         <h3>Velocidade</h3>
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Autem consequuntur nostrum ex pariatur culpa, ipsa, at quia modi, saepe ducimus eum exercitationem nemo unde. Tempora enim quidem perspiciatis a deleniti.</p>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Autem consequuntur nostrum ex
+                            pariatur culpa.</p>
                     </li>
 
                     <li>
                         <i class="fa-solid fa-comments"></i>
                         <h3>Suporte</h3>
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Autem consequuntur nostrum ex pariatur culpa, ipsa, at quia modi, saepe ducimus eum exercitationem nemo unde. Tempora enim quidem perspiciatis a deleniti.</p>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Autem consequuntur nostrum ex
+                            pariatur culpa.</p>
                     </li>
                 </ul>
+            </section>
+
+            <section class="pricing-container">
+                <h2>Planos e Preços</h2>
+                <p>Selecione o plano perfeito para você!</p>
+                <div class="plans-container">
+                    <div class="plan">
+                        <ul>
+                            <li class="price">R$15/mês</li>
+                            <li class="plan-name">Padrão</li>
+                            <li>2GB de espaço em disco</li>
+                            <li>10 Sub-dominios</li>
+                            <li>25 Contas de E-mails</li>
+                            <li>C-Panel</li>
+                            <li>Suporte 24/7</li>
+                            <li class="plan-btn">Selecionar</li>
+                        </ul>
+                    </div>
+
+                    <div class="plan">
+                        <ul>
+                            <li class="price">R$20/mês</li>
+                            <li class="plan-name">Medio</li>
+                            <li>4GB de espaço em disco</li>
+                            <li>15 Sub-dominios</li>
+                            <li>30 Contas de E-mails</li>
+                            <li>C-Panel</li>
+                            <li>Suporte 24/7</li>
+                            <li class="plan-btn">Selecionar</li>
+                        </ul>
+                    </div>
+
+                    <div class="plan">
+                        <ul>
+                            <li class="price senior">R$25/mês</li>
+                            <li class="plan-name">Senior</li>
+                            <li>6GB de espaço em disco</li>
+                            <li>20 Sub-dominios</li>
+                            <li>35 Contas de E-mails</li>
+                            <li>C-Panel</li>
+                            <li>Suporte 24/7</li>
+                            <li class="plan-btn senior-btn">Selecionar</li>
+                        </ul>
+                    </div>
+
+                    <div class="plan">
+                        <ul>
+                            <li class="price">R$30/mês</li>
+                            <li class="plan-name">Master</li>
+                            <li>8GB de espaço em disco</li>
+                            <li>25 Sub-dominios</li>
+                            <li>40 Contas de E-mails</li>
+                            <li>C-Panel</li>
+                            <li>Suporte 24/7</li>
+                            <li class="plan-btn">Selecionar</li>
+                        </ul>
+                    </div>
+                </div>
+            </section>
+
+            <section class="searchdomain-container">
+                <h2>Buscar um Dominio</h2>
+                <p>Veja se o dominio que você deseja está disponivel</p>
+                <form action="">
+                    <input class="dominio" type="text" name="domain" id="" placeholder="Digite seu dominio desejado">
+                    <input class="submit-btn" type="submit" value="Buscar Dominio">
+                </form>
+            </section>
+
+            <section class="contact-container">
+                <h2>Entre em Contato</h2>
+                <p>Mande uma menssagem para nós conversarmos sobre a melhor hospedagem para seu negócio.</p>
+                <form action="">
+                    <input type="text" name="name" id="" placeholder="Seu nome">
+                    <input type="email" name="email" id="" placeholder="Seu E-mail">
+                    <textarea name="message" placeholder="Digite sua mensagem"></textarea>
+                    <input type="submit" value="Enviar">
+                </form>
             </section>
         </main>
     </div>
