Atualizei a pagina com um form

--- a/Prof-Arley/SuperMarioBross/index.html
+++ b/Prof-Arley/SuperMarioBross/index.html
@@ -83,6 +83,8 @@
             <li><a href="#">Whatsapp</a></li>
         </ul>
     </footer>
+
+    <script src="https://kit.fontawesome.com/ebc3101efe.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
