--- a/Prof-Arley/SuperMarioBross/pages/games.html
+++ b/Prof-Arley/SuperMarioBross/pages/games.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Games Mario</title>
 </head>
+
 <body>
     <header>
         <img src="" alt="">
@@ -27,7 +29,9 @@
 
             <div class="mario-world__text">
                 <h2>Mario World</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel debitis voluptatibus illum. Fugit atque tenetur vero porro provident quasi quo commodi vel ea aliquam inventore repellat, ad est quibusdam nam?</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel debitis voluptatibus illum. Fugit atque
+                    tenetur vero porro provident quasi quo commodi vel ea aliquam inventore repellat, ad est quibusdam
+                    nam?</p>
                 <a href="#">Botão</a>
             </div>
         </section>
@@ -39,8 +43,20 @@
 
             <div class="mario-kart__text">
                 <h2>Mario Kart</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel debitis voluptatibus illum. Fugit atque tenetur vero porro provident quasi quo commodi vel ea aliquam inventore repellat, ad est quibusdam nam?</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel debitis voluptatibus illum. Fugit atque
+                    tenetur vero porro provident quasi quo commodi vel ea aliquam inventore repellat, ad est quibusdam
+                    nam?</p>
                 <a href="#">Botão</a>
+            </div>
+
+            <div>
+                <h2>Jogos Nintendo</h2>
+                <p>Procure os jogos que marcaram sua infancia e os jogos da atualizade aqui !</p>
+                <form action="">
+                    <label for="text"><i class="fa-solid fa-magnifying-glass"></i></label>
+                    <input type="text" name="text" id="text">
+                    <input type="submit" value="Procurar">
+                </form>
             </div>
         </section>
     </main>
@@ -56,5 +72,8 @@
             <li><a href="#">Whatsapp</a></li>
         </ul>
     </footer>
+
+    <script src="https://kit.fontawesome.com/ebc3101efe.js" crossorigin="anonymous"></script>
 </body>
+
 </html>
