Dei inicio no projeto Mario na parte do codigo

--- a/Prof-Arley/SuperMarioBross/index.html
+++ b/Prof-Arley/SuperMarioBross/index.html
@@ -7,17 +7,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Super Mario Bros</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="shortcut icon" href="img/apple-touch-icon.png" type="image/x-icon">
 </head>
 
 <body>
     <header>
-        <img class="logo" src="img/Mario_Series_Logo.svg.png" alt="">
+        <a href="index.html">
+            <img class="logo" src="img/Mario_Series_Logo.svg.png" alt="">
+        </a>
         <nav>
             <ul class="menu-navbar">
-                <li><a href="#">Inicio</a></li>
+                <li><a href="#">Home</a></li>
                 <li><a href="./pages/games.html">Games</a></li>
-                <li><a href="#">Github</a></li>
-                <li><a href="#">Settings</a></li>
+                <li><a href="#"><i class="fa-brands fa-github"></i></a></li>
+                <li><a href="#"><i class="fa-solid fa-gear"></i></a></li>
             </ul>
         </nav>
     </header>
@@ -25,31 +28,31 @@
     <main>
         <section class="mario">
             <div class="image__mario">
-                <img src="" alt="">
+                <img class="image-personagem" src="img/super-mario.webp" alt="">
             </div>
 
-            <div class="text">
-                <h2>Mario</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis provident, fuga illum veniam excepturi et vitae, voluptas accusamus in quia consequatur delectus unde eveniet vel dolorem. Illo impedit facere quae.</p>
-                <a href="#">Botão</a>
+            <div class="mario__text">
+                <h2 class="mario__title">Mario</h2>
+                <p class="mario__paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis provident, fuga illum veniam excepturi et vitae, voluptas accusamus in quia consequatur delectus unde eveniet vel dolorem. Illo impedit facere quae.</p>
+                <a class="mario__btn" href="#">Saiba mais!</a>
             </div>
         </section>
 
         <section class="luigi">
             <div class="image__luigi">
-                <img src="" alt="">
+                <img class="image-personagem" src="img/luigi.png" alt="">
             </div>
 
-            <div class="text">
-                <h2>Luigi</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis provident, fuga illum veniam excepturi et vitae, voluptas accusamus in quia consequatur delectus unde eveniet vel dolorem. Illo impedit facere quae.</p>
-                <a href="#">Botão</a>
+            <div class="luigi__text">
+                <h2 class="luigi__title">Luigi</h2>
+                <p class="luigi__paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis provident, fuga illum veniam excepturi et vitae, voluptas accusamus in quia consequatur delectus unde eveniet vel dolorem. Illo impedit facere quae.</p>
+                <a class="luigi__btn" href="#">Saiba mais!</a>
             </div>
         </section>
 
         <section class="princesa">
             <div class="image__princesa">
-                <img src="" alt="">
+                <img class="image-personagem" src="" alt="">
             </div>
 
             <div class="text">
@@ -61,7 +64,7 @@
 
         <section class="bowser">
             <div class="image__bowser">
-                <img src="" alt="">
+                <img class="image-personagem" src="" alt="">
             </div>
 
             <div class="text">
