Comecei a realizar toda a estruturação da primeira pagina, criando o header, config as sections e criando o footer

--- a/Prof-Arley/SuperMarioBross/index.html
+++ b/Prof-Arley/SuperMarioBross/index.html
@@ -26,64 +26,75 @@
     </header>
 
     <main>
-        <section class="mario">
-            <div class="image__mario">
-                <img class="image-personagem" src="img/super-mario.webp" alt="">
+        <section class="personagem">
+            <div class="personagem__image">
+                <img class="personagem__img" src="img/super-mario.webp" alt="">
             </div>
 
-            <div class="mario__text">
-                <h2 class="mario__title">Mario</h2>
-                <p class="mario__paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis provident, fuga illum veniam excepturi et vitae, voluptas accusamus in quia consequatur delectus unde eveniet vel dolorem. Illo impedit facere quae.</p>
-                <a class="mario__btn" href="#">Saiba mais!</a>
-            </div>
-        </section>
-
-        <section class="luigi">
-            <div class="image__luigi">
-                <img class="image-personagem" src="img/luigi.png" alt="">
-            </div>
-
-            <div class="luigi__text">
-                <h2 class="luigi__title">Luigi</h2>
-                <p class="luigi__paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis provident, fuga illum veniam excepturi et vitae, voluptas accusamus in quia consequatur delectus unde eveniet vel dolorem. Illo impedit facere quae.</p>
-                <a class="luigi__btn" href="#">Saiba mais!</a>
+            <div class="personagem__text">
+                <h2 class="personagem__title">Mario</h2>
+                <p class="personagem__paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
+                    provident, fuga illum veniam excepturi et vitae, voluptas accusamus in quia consequatur delectus
+                    unde eveniet vel dolorem. Illo impedit facere quae.</p>
+                <a class="personagem__btn" href="#">Saiba mais!</a>
             </div>
         </section>
 
-        <section class="princesa">
-            <div class="image__princesa">
-                <img class="image-personagem" src="" alt="">
+        <section class="personagem">
+            <div class="personagem__image">
+                <img class="personagem__img" src="img/luigi.png" alt="">
             </div>
 
-            <div class="text">
-                <h2>Princesa</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis provident, fuga illum veniam excepturi et vitae, voluptas accusamus in quia consequatur delectus unde eveniet vel dolorem. Illo impedit facere quae.</p>
-                <a href="#">Botão</a>
+            <div class="personagem__text">
+                <h2 class="personagem__title">Luigi</h2>
+                <p class="personagem__paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
+                    provident, fuga illum veniam excepturi et vitae, voluptas accusamus in quia consequatur delectus
+                    unde eveniet vel dolorem. Illo impedit facere quae.</p>
+                <a class="personagem__btn" href="#">Saiba mais!</a>
             </div>
         </section>
 
-        <section class="bowser">
-            <div class="image__bowser">
-                <img class="image-personagem" src="" alt="">
+        <section class="personagem">
+            <div class="personagem__image">
+                <img class="personagem__img" src="img/princesa-peach.png" alt="">
             </div>
 
-            <div class="text">
-                <h2>Bowser</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis provident, fuga illum veniam excepturi et vitae, voluptas accusamus in quia consequatur delectus unde eveniet vel dolorem. Illo impedit facere quae.</p>
-                <a href="#">Botão</a>
+            <div class="personagem__text">
+                <h2 class="personagem__title">Peach</h2>
+                <p class="personagem__paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
+                    provident, fuga illum veniam excepturi et vitae, voluptas accusamus in quia consequatur delectus
+                    unde eveniet vel dolorem. Illo impedit facere quae.</p>
+                <a class="personagem__btn" href="#">Saiba mais!</a>
+            </div>
+        </section>
+
+        <section class="personagem">
+            <div class="personagem__image">
+                <img class="personagem__img" src="img/bowser.png" alt="">
+            </div>
+
+            <div class="personagem__text">
+                <h2 class="personagem__title">Bowser</h2>
+                <p class="personagem__paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
+                    provident, fuga illum veniam excepturi et vitae, voluptas accusamus in quia consequatur delectus
+                    unde eveniet vel dolorem. Illo impedit facere quae.</p>
+                <a class="personagem__btn " href="#">Saiba mais!</a>
             </div>
         </section>
     </main>
 
-    <footer>
-        <h2>Desenvolvedor - Pedro Nascimento LD </h2>
-        <p>Aprendizagem sobre WireFrame - SenacSP</p>
+    <footer class="footer-container">
+        <div class="footer-container__img">
+            <img class="footer-img" src="img/logo.png" alt="">
+            <h2 class="footer-container__title">Desenvolvedor - Pedro Nascimento LD </h2>
+        </div>
+        <p class="footer-container__paragraph">Aprendizagem sobre criação de WireFrame, Prototipo e codigo - SenacSP</p>
 
         <ul class="footer-menu">
-            <li><a href="#">Github</a></li>
-            <li><a href="#">Instagram</a></li>
-            <li><a href="#">Facebook</a></li>
-            <li><a href="#">Whatsapp</a></li>
+            <li><a href="#"><i class="fa-brands fa-github"></i></a></li>
+            <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
+            <li><a href="#"><i class="fa-brands fa-facebook"></i></a></li>
+            <li><a href="#"><i class="fa-brands fa-whatsapp"></i></a></li>
         </ul>
     </footer>
 
