Dei inicio na criação da pagina Games, porém somente foi passado o header, para ficar padrão entre as paginas e dei continuidade no prototipo no Figma

--- a/Prof-Arley/SuperMarioBross/pages/games.html
+++ b/Prof-Arley/SuperMarioBross/pages/games.html
@@ -6,17 +6,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Games Mario</title>
+    <link rel="stylesheet" href="css/style-games.css">
 </head>
 
 <body>
     <header>
-        <img src="" alt="">
+        <a href="index.html">
+            <img class="logo" src="../img/Mario_Series_Logo.svg.png" alt="">
+        </a>
         <nav>
-            <ul class="menu-navbar">
-                <li><a href="../index.html">Inicio</a></li>
-                <li><a href="#">Jogos</a></li>
-                <li><a href="#">Github</a></li>
-                <li><a href="#">Settings</a></li>
+            <ul class="menu menu-navbar">
+                <li><a href="../index.html">Home</a></li>
+                <li><a href="./pages/games.html">Games</a></li>
+                <li><a href="#"><i class="fa-brands fa-github"></i></a></li>
+                <li><a href="#"><i class="fa-solid fa-gear"></i></a></li>
             </ul>
         </nav>
     </header>
@@ -24,7 +27,7 @@
     <main>
         <section class="mario-World">
             <div class="mario-world__vdo">
-                <!-- Iframe ou Video -->
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/3Tc_Ek0ASSA?si=ZqqQOgGNIqVYMSyn" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </div>
 
             <div class="mario-world__text">
