--- a/Prof-Arley/SuperMarioBross/index.html
+++ b/Prof-Arley/SuperMarioBross/index.html
@@ -16,8 +16,8 @@
             <img class="logo" src="img/Mario_Series_Logo.svg.png" alt="">
         </a>
         <nav>
-            <ul class="menu-navbar">
-                <li><a href="#">Home</a></li>
+            <ul class="menu menu-navbar">
+                <li><a href="./index.html">Home</a></li>
                 <li><a href="./pages/games.html">Games</a></li>
                 <li><a href="#"><i class="fa-brands fa-github"></i></a></li>
                 <li><a href="#"><i class="fa-solid fa-gear"></i></a></li>
@@ -33,9 +33,7 @@
 
             <div class="personagem__text">
                 <h2 class="personagem__title">Mario</h2>
-                <p class="personagem__paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
-                    provident, fuga illum veniam excepturi et vitae, voluptas accusamus in quia consequatur delectus
-                    unde eveniet vel dolorem. Illo impedit facere quae.</p>
+                <p class="personagem__paragraph">Mario é retratado como um encanador italiano baixinho rechonchudo e bigodudo vindo do Brooklyn que reside no Reino dos Cogumelos. Ele repetidamente tem a missão de resgatar a Princesa Peach do vilão Bowser, e impedir seus diversos planos de destruir e dominar o reino.</p>
                 <a class="personagem__btn" href="#">Saiba mais!</a>
             </div>
         </section>
@@ -47,9 +45,7 @@
 
             <div class="personagem__text">
                 <h2 class="personagem__title">Luigi</h2>
-                <p class="personagem__paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
-                    provident, fuga illum veniam excepturi et vitae, voluptas accusamus in quia consequatur delectus
-                    unde eveniet vel dolorem. Illo impedit facere quae.</p>
+                <p class="personagem__paragraph">Luigi nasceu quando Shigeru Miyamoto se propôs a criar Mario Bros, após ser dito que Mario se assemelhava a um encanador, um conceito que ele queria estabelecer oficialmente (para sempre). Ele criou Luigi com o intuito do jogo poder ter dois jogadores, sendo os irmãos Mario e Luigi. Assim nasceu Luigi.</p>
                 <a class="personagem__btn" href="#">Saiba mais!</a>
             </div>
         </section>
@@ -61,9 +57,7 @@
 
             <div class="personagem__text">
                 <h2 class="personagem__title">Peach</h2>
-                <p class="personagem__paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
-                    provident, fuga illum veniam excepturi et vitae, voluptas accusamus in quia consequatur delectus
-                    unde eveniet vel dolorem. Illo impedit facere quae.</p>
+                <p class="personagem__paragraph">Ela reside em seu castelo junto de vários Toads, que agem como seus leais súditos. Seu reino é frequentemente atacado pela Tropa Koopa, uma tropa liderada pelo Bowser. Ela é o interesse amoroso do super Mario. Peach tem uma paixão pela cor rosa, interesse que dá ênfase na personalidade gentil e doce dela.</p>
                 <a class="personagem__btn" href="#">Saiba mais!</a>
             </div>
         </section>
@@ -75,9 +69,7 @@
 
             <div class="personagem__text">
                 <h2 class="personagem__title">Bowser</h2>
-                <p class="personagem__paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
-                    provident, fuga illum veniam excepturi et vitae, voluptas accusamus in quia consequatur delectus
-                    unde eveniet vel dolorem. Illo impedit facere quae.</p>
+                <p class="personagem__paragraph">Bowser é muito malvado e sabe muito bem trapacear para dificultar o avanço dos seus inimigos. Bowser vive sequestrado a Princesa Peach só para força-la a dar a ele o Reino dos Cogumelos, para força-la a se casar com ele ou para atrair o Mario só para tentar destruir o encanador do Brooklyn.</p>
                 <a class="personagem__btn " href="#">Saiba mais!</a>
             </div>
         </section>
