Terminamos o projeto FlexTurismo

--- a/Prof-Bruno/homeHost/index.html
+++ b/Prof-Bruno/homeHost/index.html
@@ -134,6 +134,10 @@
                 </form>
             </section>
         </main>
+
+        <footer>
+            <p> &copy; Todos os direitos Reservados</p>
+        </footer>
     </div>
 
     <script src="https://kit.fontawesome.com/ebc3101efe.js" crossorigin="anonymous"></script>
