--- a/Prof-Bruno/logicaDeProgramacao/index.html
+++ b/Prof-Bruno/logicaDeProgramacao/index.html
@@ -1,12 +1,26 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Logica De Programação</title>
 </head>
+
 <body>
+    <h1>Programa Tabuada</h1>
+    <form action="">
+        <label for="inNumero">Número:</label>
+        <input type="text" name="" id="inNumero">
+
+        <br><br>
+
+        <input type="button" value="Mostrar Tabuada" id="btMostrar">
+        <pre id="outTabuada"></pre>
+    </form>
+
     <script src="script.js"></script>
 </body>
+
 </html>
