Realizei a criação da pagina Games do Projeto Super Mario Bross, adicionando os frames de videos, textos da historia dos jogos mario world e mario kart, criei o campo de busca usando label e inputs, hoje 11.12.23, terminei as paginas para Desktop, o proximo passo será aplicar as midias queries para trabalhar responsividade para mobile e tablet

--- a/Prof-Arley/SuperMarioBross/index.html
+++ b/Prof-Arley/SuperMarioBross/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Super Mario Bros</title>
+    <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="shortcut icon" href="img/apple-touch-icon.png" type="image/x-icon">
 </head>
@@ -19,7 +20,7 @@
             <ul class="menu menu-navbar">
                 <li><a href="./index.html">Home</a></li>
                 <li><a href="./pages/games.html">Games</a></li>
-                <li><a href="#"><i class="fa-brands fa-github"></i></a></li>
+                <li><a href="https://github.com/NascimentoLD" target="_blank"><i class="fa-brands fa-github"></i></a></li>
                 <li><a href="#"><i class="fa-solid fa-gear"></i></a></li>
             </ul>
         </nav>
@@ -80,10 +81,10 @@
             <img class="footer-img" src="img/logo.png" alt="">
             <h2 class="footer-container__title">Desenvolvedor - Pedro Nascimento LD </h2>
         </div>
-        <p class="footer-container__paragraph">Aprendizagem sobre criação de WireFrame, Prototipo e codigo - SenacSP</p>
+        <p class="footer-container__paragraph">Aprendizagem sobre criação de wireFrame, prototipo e estruturação com HTML e CSS - SenacSP</p>
 
         <ul class="footer-menu">
-            <li><a href="#"><i class="fa-brands fa-github"></i></a></li>
+            <li><a href="https://github.com/NascimentoLD"><i class="fa-brands fa-github"></i></a></li>
             <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
             <li><a href="#"><i class="fa-brands fa-facebook"></i></a></li>
             <li><a href="#"><i class="fa-brands fa-whatsapp"></i></a></li>
