--- a/Prof-Arley/SuperMarioBross/pages/games.html
+++ b/Prof-Arley/SuperMarioBross/pages/games.html
@@ -6,7 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Games Mario</title>
-    <link rel="stylesheet" href="css/style-games.css">
+    <link rel="stylesheet" href="../css/reset.css">
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="shortcut icon" href="../img/Mario_Series_Logo.svg.png" type="image/x-icon">
 </head>
 
 <body>
@@ -18,61 +20,107 @@
             <ul class="menu menu-navbar">
                 <li><a href="../index.html">Home</a></li>
                 <li><a href="./pages/games.html">Games</a></li>
-                <li><a href="#"><i class="fa-brands fa-github"></i></a></li>
+                <li><a href="https://github.com/NascimentoLD" target="_blank"><i class="fa-brands fa-github"></i></a></li>
                 <li><a href="#"><i class="fa-solid fa-gear"></i></a></li>
             </ul>
         </nav>
     </header>
 
     <main>
-        <section class="mario-World">
-            <div class="mario-world__vdo">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/3Tc_Ek0ASSA?si=ZqqQOgGNIqVYMSyn" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        <section class="mario-games">
+            <h2 class="mario-games__title">Mario World</h2>
+            <div class="mario-games__vdo">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/3Tc_Ek0ASSA?si=ZqqQOgGNIqVYMSyn"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    allowfullscreen></iframe>
             </div>
 
-            <div class="mario-world__text">
-                <h2>Mario World</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel debitis voluptatibus illum. Fugit atque
-                    tenetur vero porro provident quasi quo commodi vel ea aliquam inventore repellat, ad est quibusdam
-                    nam?</p>
-                <a href="#">Botão</a>
+            <div class="mario-games__text">
+                <p class="mario-games__paragraph">
+                    Super Mario World levou três anos para ser desenvolvido. A direção ficou a cargo de Takashi Tezuka
+                    com produção e supervisão de Shigeru Miyamoto. Miyamoto queria, desde o primeiro Super Mario Bros,
+                    um companheiro em forma de dinossauro para Mario. Contudo, a ideia foi protelada até o primeiro game
+                    do Super Nintendo, devido às limitações dos cartuchos do NES.
+
+                    Super Mario World é um jogo de plataforma com gráficos e jogabilidade 2D. Um dos seus principais
+                    destaques, além da quantidade de fases, eram os segredos que o jogo guardava. Havia vários caminhos
+                    alternativos que levavam o jogador por diferentes conjuntos de fases, popularmente chamados na época
+                    de “mundos”. Outro diferencial era a quantidade de power-ups e suas variações que surgiam quando o
+                    Mario estava no Yoshi. Havia também Yoshis de outra cores com habilidades diferentes.
+
+                    Na história de Super Mario World, Mario está em Dinossaur Land e após libertar Yoshi, ele descobre
+                    que a ilha foi invadida por Bowser (Rei Koopa) e seus filhos. Cabe então a Mario e Luigi, derrotar
+                    Bowser, destruindo os castelos que ele e seus filhos construíram, salvar a princesa e recuperar a
+                    Dinossaur Land.
+                </p>
+
+                <div class="games-btn">
+                    <a href="#">Download</a>
+                </div>
+
             </div>
         </section>
 
-        <section class="mario-Kart">
-            <div class="mario-kart__vdo">
-                <!-- Iframe ou Video -->
+        <section class="mario-games">
+            <h2 class="mario-games__title">Mario Kart</h2>
+            <div class="mario-games__vdo">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/u2JoZVMESKE?si=JhTE4JHAvUO7tPsw"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    allowfullscreen></iframe>
             </div>
 
-            <div class="mario-kart__text">
-                <h2>Mario Kart</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel debitis voluptatibus illum. Fugit atque
-                    tenetur vero porro provident quasi quo commodi vel ea aliquam inventore repellat, ad est quibusdam
-                    nam?</p>
-                <a href="#">Botão</a>
+            <div class="mario-games__text">
+                <p class="mario-games__paragraph">
+                    O projeto de Mario Kart nasceu, originalmente, como a tentativa de fazer um jogo multijogador de uma
+                    outra franquia da empresa, o F-Zero. Mas, com o tempo, felizmente, essa ideia foi abortada, dando
+                    origem a história de Mario Kart. Hoje, a franquia de corrida da Nintendo é uma das mais rentáveis da
+                    empresa e incentivou a criação de uma série de clones.
+
+                    Para o lançamento do novo console da Nintendo, o Super NES, a empresa havia desenvolvido um jogo
+                    especial para mostrar toda a capacidade do aparelho. Assim nascia uma das franquias mais amadas da
+                    empresa: a F-Zero.
+                    O game tinha um senso de velocidade gigantesco e trazia pistas bastante elaboradas, além de serem
+                    muito grandes. Os gráficos também eram muito inovadores, algo nunca visto até então em consoles
+                    caseiros. Tamanha qualidade fez com que as vendas chegassem a quase 3 milhões de cópias. Contudo,
+                    faltava uma coisa em F-Zero: a possibilidade de se jogar com os amigos.
+                </p>
+
+                <div class="games-btn">
+                    <a href="#">Download</a>
+                </div>
             </div>
 
-            <div>
-                <h2>Jogos Nintendo</h2>
-                <p>Procure os jogos que marcaram sua infancia e os jogos da atualizade aqui !</p>
-                <form action="">
-                    <label for="text"><i class="fa-solid fa-magnifying-glass"></i></label>
-                    <input type="text" name="text" id="text">
-                    <input type="submit" value="Procurar">
-                </form>
+        </section>
+
+        <section class="form-content">
+            <h2 class="form-content__title">Jogos Nintendo</h2>
+            <p class="form-content__paragraph">Encontre os jogos que marcaram sua infância e os que estão em destaque na atualidade! </p>
+
+            <div class="form-content__buscar">
+                <label for="isearch"><i class="fa-solid fa-magnifying-glass"></i></label>
+                <input type="text" name="search" id="isearch" class="pesquisar">
             </div>
+                <div class="form-content__btn">
+                    <a href="#">Pesquisar</a>
+                </div>
+
         </section>
     </main>
 
-    <footer>
-        <h2>Desenvolvedor - Pedro Nascimento LD </h2>
-        <p>Aprendizagem sobre WireFrame - SenacSP</p>
+    <footer class="footer-container">
+        <div class="footer-container__img">
+            <img class="footer-img" src="../img/logo.png" alt="">
+            <h2 class="footer-container__title">Desenvolvedor - Pedro Nascimento LD </h2>
+        </div>
+        <p class="footer-container__paragraph">Aprendizagem sobre criação de WireFrame, Prototipo e codigo - SenacSP</p>
 
         <ul class="footer-menu">
-            <li><a href="#">Github</a></li>
-            <li><a href="#">Instagram</a></li>
-            <li><a href="#">Facebook</a></li>
-            <li><a href="#">Whatsapp</a></li>
+            <li><a href="https://github.com/NascimentoLD" target="_blank"><i class="fa-brands fa-github"></i></a></li>
+            <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
+            <li><a href="#"><i class="fa-brands fa-facebook"></i></a></li>
+            <li><a href="#"><i class="fa-brands fa-whatsapp"></i></a></li>
         </ul>
     </footer>
 
