Hoje dei inicio nas questão da responsividade, aplicando midia query no projeto Super Mario Bross, aprocando unidade de medida REM, para responsividade nos textos e realizei pequenas alterações no footer

--- a/Prof-Arley/SuperMarioBross/index.html
+++ b/Prof-Arley/SuperMarioBross/index.html
@@ -23,6 +23,7 @@
                 <li><a href="https://github.com/NascimentoLD" target="_blank"><i class="fa-brands fa-github"></i></a></li>
                 <li><a href="#"><i class="fa-solid fa-gear"></i></a></li>
             </ul>
+            <img class="menu-hamb" src="img/logo.png" alt="">
         </nav>
     </header>
 
@@ -78,13 +79,13 @@
 
     <footer class="footer-container">
         <div class="footer-container__img">
-            <img class="footer-img" src="img/logo.png" alt="">
+            <img class="footer-img" src="../img/logo.png" alt="">
             <h2 class="footer-container__title">Desenvolvedor - Pedro Nascimento LD </h2>
         </div>
-        <p class="footer-container__paragraph">Aprendizagem sobre criação de wireFrame, prototipo e estruturação com HTML e CSS - SenacSP</p>
+        <p class="footer-container__paragraph">Aprendizagem sobre criação de WireFrame, Prototipo e codigo - SenacSP</p>
 
         <ul class="footer-menu">
-            <li><a href="https://github.com/NascimentoLD"><i class="fa-brands fa-github"></i></a></li>
+            <li><a href="https://github.com/NascimentoLD" target="_blank"><i class="fa-brands fa-github"></i></a></li>
             <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
             <li><a href="#"><i class="fa-brands fa-facebook"></i></a></li>
             <li><a href="#"><i class="fa-brands fa-whatsapp"></i></a></li>
