--- a/Prof-Arley/SuperMarioBross/pages/games.html
+++ b/Prof-Arley/SuperMarioBross/pages/games.html
@@ -13,7 +13,7 @@
 
 <body>
     <header>
-        <a href="index.html">
+        <a href="../index.html">
             <img class="logo" src="../img/Mario_Series_Logo.svg.png" alt="">
         </a>
         <nav>
@@ -23,6 +23,7 @@
                 <li><a href="https://github.com/NascimentoLD" target="_blank"><i class="fa-brands fa-github"></i></a></li>
                 <li><a href="#"><i class="fa-solid fa-gear"></i></a></li>
             </ul>
+            <img class="menu-hamb" src="../img/logo.png" alt="">
         </nav>
     </header>
 
@@ -42,13 +43,15 @@
                     com produção e supervisão de Shigeru Miyamoto. Miyamoto queria, desde o primeiro Super Mario Bros,
                     um companheiro em forma de dinossauro para Mario. Contudo, a ideia foi protelada até o primeiro game
                     do Super Nintendo, devido às limitações dos cartuchos do NES.
-
+                </p>
+                <p class="mario-games__paragraph">
                     Super Mario World é um jogo de plataforma com gráficos e jogabilidade 2D. Um dos seus principais
                     destaques, além da quantidade de fases, eram os segredos que o jogo guardava. Havia vários caminhos
                     alternativos que levavam o jogador por diferentes conjuntos de fases, popularmente chamados na época
                     de “mundos”. Outro diferencial era a quantidade de power-ups e suas variações que surgiam quando o
                     Mario estava no Yoshi. Havia também Yoshis de outra cores com habilidades diferentes.
-
+                </p>
+                <p class="mario-games__paragraph">
                     Na história de Super Mario World, Mario está em Dinossaur Land e após libertar Yoshi, ele descobre
                     que a ilha foi invadida por Bowser (Rei Koopa) e seus filhos. Cabe então a Mario e Luigi, derrotar
                     Bowser, destruindo os castelos que ele e seus filhos construíram, salvar a princesa e recuperar a
@@ -77,7 +80,8 @@
                     outra franquia da empresa, o F-Zero. Mas, com o tempo, felizmente, essa ideia foi abortada, dando
                     origem a história de Mario Kart. Hoje, a franquia de corrida da Nintendo é uma das mais rentáveis da
                     empresa e incentivou a criação de uma série de clones.
-
+                </p>
+                <p class="mario-games__paragraph">
                     Para o lançamento do novo console da Nintendo, o Super NES, a empresa havia desenvolvido um jogo
                     especial para mostrar toda a capacidade do aparelho. Assim nascia uma das franquias mais amadas da
                     empresa: a F-Zero.
