--- a/Prof-Arley/SuperMarioBross/index.html
+++ b/Prof-Arley/SuperMarioBross/index.html
@@ -82,7 +82,7 @@
             <img class="footer-img" src="../img/logo.png" alt="">
             <h2 class="footer-container__title">Desenvolvedor - Pedro Nascimento LD </h2>
         </div>
-        <p class="footer-container__paragraph">Aprendizagem sobre criação de WireFrame, Prototipo e codigo - SenacSP</p>
+        <p class="footer-container__paragraph">Aprendizagem sobre criação de WireFrame, Prototipo e codigo - SenacSP ....</p>
 
         <ul class="footer-menu">
             <li><a href="https://github.com/NascimentoLD" target="_blank"><i class="fa-brands fa-github"></i></a></li>
